Fixed jextract